// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CartTitle stories snapshot > EmptyCart story renders and matches snapshot 1`] = `
<div>
  <h1
    class="text-3xl font-semibold tracking-tight text-left my-6"
  >
    Cart (0 items)
  </h1>
</div>
`;

exports[`CartTitle stories snapshot > LargeItemCount story renders and matches snapshot 1`] = `
<div>
  <h1
    class="text-3xl font-semibold tracking-tight text-left my-6"
  >
    Cart (99 items)
  </h1>
</div>
`;

exports[`CartTitle stories snapshot > SingleAndMultipleItems story renders and matches snapshot 1`] = `
<div>
  <div
    class="flex flex-col gap-8"
  >
    <div>
      <p
        class="text-sm text-muted-foreground mb-2"
      >
        Single item:
      </p>
      <h1
        class="text-3xl font-semibold tracking-tight text-left my-6"
      >
        Cart (1 item)
      </h1>
    </div>
    <div>
      <p
        class="text-sm text-muted-foreground mb-2"
      >
        Multiple items:
      </p>
      <h1
        class="text-3xl font-semibold tracking-tight text-left my-6"
      >
        Cart (3 items)
      </h1>
    </div>
  </div>
</div>
`;
